# validation_eem_acks2_reaxff

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compute_charges  compute_charges.py  compute_charges_ext.pyx  compute_charges_lib.py  ffield_acks2  ffield_eem  low.cpp  low.h  low.pxd  pyproject.toml  run_some_examples.sh  setup.py
cod_orthorhombic/: 2007371.bgf  2007371.cif  2007371.xyz  2008187.bgf  2008187.cif  2008187.xyz  2010290.bgf  2010290.cif  2010290.xyz  2011410.bgf  2011410.cif  2011410.xyz  2018027.bgf  2018027.cif  2018027.xyz  2100269.bgf  2100269.cif  2100269.xyz  2101361.bgf  2101361.cif  2101361.xyz  2200807.bgf  2200807.cif  2200807.xyz  2205445.bgf  2205445.cif  2205445.xyz  2215601.bgf  2215601.cif  2215601.xyz  2237472.bgf  2237472.cif  2237472.xyz  4116139.bgf  4116139.cif  4116139.xyz  4116148.bgf  4116148.cif  4116148.xyz  4503066.bgf  (+38 more)
cod_triclinic/: 1508741.bgf  1508741.cif  1508741.xyz  2012894.bgf  2012894.cif  2012894.xyz  4111364.bgf  4111364.cif  4111364.xyz  7053689.bgf  7053689.cif  7053689.xyz  7200493.bgf  7200493.cif  7200493.xyz  7225245.bgf  7225245.cif  7225245.xyz
s66/: 2701_01WaterWater100.bgf  2701_01WaterWater100.constraints.txt  2701_01WaterWater100.xyz  2709_02WaterMeOH100.bgf  2709_02WaterMeOH100.xyz  2717_03WaterMeNH2100.bgf  2717_03WaterMeNH2100.xyz  2725_04WaterPeptide100.bgf  2725_04WaterPeptide100.xyz  2733_05MeOHMeOH100.bgf  2733_05MeOHMeOH100.xyz  2741_06MeOHMeNH2100.bgf  2741_06MeOHMeNH2100.xyz  2749_07MeOHPeptide100.bgf  2749_07MeOHPeptide100.xyz  2757_08MeOHWater100.bgf  2757_08MeOHWater100.xyz  (+116 more)
(+4 files in other folders)
