[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QCalc"
authors = [
  { name="Toon Verstraelen", email="toon.verstraelen@ugent.be" },
]
description = "Reference implementation of EEM and ACKS2 in ReaxFF"
readme = "README.md"
license = {file = "COPYING"}
requires-python = ">=3.8"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
]
dynamic = ["version"]

[project.scripts]
qcalc = "qcalc.__main__:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[too.ruff.lint]
select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF", "C"]
ignore = ["PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLW2901", "C901"]

[tool.setuptools_scm]
write_to = "src/qcalc/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
